fix dropdown meny on mobile

--- a/phpgwapi/templates/aalesund/css/sample.css
+++ b/phpgwapi/templates/aalesund/css/sample.css
@@ -339,6 +339,10 @@ dl.proplist{
     padding-bottom: 1rem;
 }
 
+.navbar-toggler{
+	margin-left:15px;
+}
+
 .header-style-m{
     font-family: Raleway;
     font-size: 20pt;
